# paper_reader

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/agents/: paper-analyzer-comparative.md
.claude/commands/: updateExample.md
.claude/rules/: check_files.md  modify_summary.md  skill_python_create.md  write_summary.md
.claude/skills/paper-analyst/: README.md  SKILL.md
.claude/skills/paper-analyst/scripts/: paper_analyst.py
.claude/skills/paper-contrast/: SKILL.md
.claude/skills/paper-contrast/scripts/: __init__.py  contrast_papers.py  generate_prompt.py
.claude/skills/paper-customize/: SKILL.md
.claude/skills/paper-customize/scripts/: __init__.py  apply_perspective.py  init_perspective.py
.claude/skills/paper-process-skill/: README.md  SKILL.md
.claude/skills/paper-process-skill/scripts/: __init__.py  paper_process.py  paper_process_skill.py
.claude/skills/paper-reader/: SKILL.md
.claude/skills/paper-reader/scripts/: download_paper.py  get_paper.py  read_pdf.py
.claude/skills/paper-reading-notes/: SKILL.md
src/items/contrastive-learning/: CLIP_Learning_Transferable_Visual_Models.md  Comparative.md  DIA-CLIP_Zero-shot_Proteomics.md  DenseCL_Pixel_Contrastive_Learning.md  Difficult_Examples_Hurt_Contrastive_Learning.md  GroupViT_Semantic_Segmentation_from_Text.md  Metrics.md  Pixel-level_Counterfactual_Contrastive_Learning.md  README.md  SimCLR_Instance_Contrastive_Learning.md  instance_vs_pixel_level.per.md
src/items/diffusion-guidance/: paper_2207.12598.md
src/profiles/: user_profile.md
tests/: test_main.py
(+1 files in other folders)
