[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-paper-reader"
version = "0.1.0"
description = "AI 驱动的论文阅读助手 — 基于 Claude Code，自动下载、阅读、总结、对比学术论文"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Paper Reader Contributors"},
]
keywords = ["paper", "academic", "arxiv", "claude", "research", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
